# heic2png

./: .gitignore  CHANGELOG.md  README.md  heic2png.py  pyproject.toml  test_conversion.py  test_heic2png.py
.github/workflows/: ci.yml
heic2png/: __init__.py  __main__.py
tests/: __init__.py  test_conversion.py  test_heic2png.py
